# Lem-ipc

./: .gitignore  CMakeLists.txt  Makefile
include/: defines.h  lemipc.h  lemipc_typedefs.h  return_codes.h
src/: check_adjacent_cells.c  fill_sembuf.c  init.c  join_game.c  lemipc_update_signal.c  main.c  move.c  print_playfield.c  receive_thread.c  send_thread.c  terminate.c
